My first commit

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /Challange/Challange/obj/Debug
+/Challange/.vs/Challange/v15/.suo
+/Challange/.vs/Challange/v15/Server/sqlite3
