--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /Challange/Challange/obj/Debug
 /Challange/.vs/Challange/v15/.suo
 /Challange/.vs/Challange/v15/Server/sqlite3
+/Challange/ChallangeTests/bin/Debug
+/Challange/ChallangeTests/obj/Debug
+/Challange/Challange/bin/Debug
+/Challange/Tests/obj/Debug
+/Challange/packages
